# nomad-api

./: Cargo.toml
src/: client.rs  jobs.rs  lib.rs
tests/: client_test.rs  job_test.rs
