[package]
name = "nomad-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { version  = "1.8", features = ["macros", "rt"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }